[package]
name = "optical-path-mask"
version = "0.1.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
gmt-analytics = { git = "https://github.com/rconan/gmt-analytics.git", rev = "919e7be" }
plotters = "0.3.1"
